--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,12 @@
   "dependencies": {
     "@types/express": "^4.17.16",
     "@types/express-validator": "^3.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^6.14.3",
     "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13"
   }
 }
